optimizate images, fill header, main and footer sections

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <a href="./index.html">WEBSTUDIO</a>
-        <un>
+        <ul>
           <li>
             <a href="">Studio</a>
           </li>
@@ -20,16 +20,16 @@
           <li>
             <a href="">Contacts</a>
           </li>
-        </un>
+        </ul>
       </nav>
 
       <address>
-        <un>
+        <ul>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </un>
+        </ul>
       </address>
     </header>
 
@@ -80,31 +80,57 @@
       <section>
         <h2>Our Team</h2>
         <ul>
-          <il>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
-          </il>
-          <il>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
-          </il>
-          <il>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
-          </il>
-          <il>
-            <img src="" alt="" />
-            <h3></h3>
-            <p></p>
-          </il>
+          <li>
+            <img
+              src="/images/reviews/mark-guerrero.jpg"
+              alt="Mark Guerrero avatar"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="/images/reviews/tom-ford.jpg"
+              alt="Tom Ford avatar"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="/images/reviews/camila-garcia.jpg"
+              alt="Camila Garcia avatar"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="/images/reviews/daniel-wilson.jpg"
+              alt="Daniel Wilson avatar"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
         </ul>
       </section>
     </main>
 
     <!-- FOOTER -->
-    <footer></footer>
+    <footer>
+      <h2>WEBSTUDIO</h2>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
