--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WEBSTUDIO</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <!-- HEADER -->
     <header>
       <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="">Studio</a>
@@ -82,7 +82,7 @@
         <ul>
           <li>
             <img
-              src="/images/reviews/mark-guerrero.jpg"
+              src="./images/mark-guerrero.jpg"
               alt="Mark Guerrero avatar"
               width="264"
               height="260"
@@ -92,7 +92,7 @@
           </li>
           <li>
             <img
-              src="/images/reviews/tom-ford.jpg"
+              src="./images/tom-ford.jpg"
               alt="Tom Ford avatar"
               width="264"
               height="260"
@@ -102,7 +102,7 @@
           </li>
           <li>
             <img
-              src="/images/reviews/camila-garcia.jpg"
+              src="./images/camila-garcia.jpg"
               alt="Camila Garcia avatar"
               width="264"
               height="260"
@@ -112,7 +112,7 @@
           </li>
           <li>
             <img
-              src="/images/reviews/daniel-wilson.jpg"
+              src="./images/daniel-wilson.jpg"
               alt="Daniel Wilson avatar"
               width="264"
               height="260"
@@ -126,7 +126,7 @@
 
     <!-- FOOTER -->
     <footer>
-      <h2>WEBSTUDIO</h2>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
